--- a/configserver/pom.xml
+++ b/configserver/pom.xml
@@ -64,7 +64,7 @@
 				<version>3.4.1</version>
 				<configuration>
 					<to>
-						<image>eazybytes/${project.artifactId}:s6</image>
+						<image>saurabh691/${project.artifactId}:s6</image>
 					</to>
 				</configuration>
 			</plugin>
